--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="Not smoking since:"
@@ -52,7 +52,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="Money saved:"
@@ -72,11 +72,11 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
+                    android:padding="5dp"
                     android:text="TextView"
-                    android:textColor="@android:color/white"
-                    android:padding="5dp" />
+                    android:textColor="@android:color/white" />
 
                 <TextView
                     android:id="@+id/txt_moneySaved"
@@ -86,7 +86,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="TextView"
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="Cigarettes not smoked:"
@@ -118,7 +118,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="Lifetime saved:"
@@ -139,7 +139,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="TextView"
@@ -153,7 +153,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:padding="5dp"
                     android:text="TextView"
@@ -186,7 +186,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -202,7 +202,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -223,7 +223,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -239,7 +239,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -260,7 +260,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -276,7 +276,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -310,7 +310,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_timeframe"
@@ -325,7 +325,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_money"
@@ -345,7 +345,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_perWeek"
@@ -359,7 +359,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -378,7 +378,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_perMonth"
@@ -392,7 +392,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -411,7 +411,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_perYear"
@@ -425,7 +425,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -444,7 +444,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_5Years"
@@ -458,7 +458,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -477,7 +477,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_10Years"
@@ -491,7 +491,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
@@ -510,7 +510,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="@string/txt_20Years"
@@ -524,7 +524,7 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
-                    android:background="#5C5656"
+                    android:background="#777777"
                     android:gravity="fill"
                     android:paddingLeft="5dp"
                     android:text="TextView"
