--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C5BFBF"
     android:orientation="vertical"
     tools:context=".gui.SecondActivity">
 
@@ -13,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView22"
@@ -22,8 +23,10 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
+                android:background="#777777"
                 android:padding="5dp"
                 android:text="@string/txt_heartrate"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <TextView
@@ -32,7 +35,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:padding="5dp" />
+                android:background="#777777"
+                android:padding="5dp"
+                android:textColor="@android:color/white" />
 
             <ProgressBar
                 android:id="@+id/pb_nicotineInBlood"
@@ -41,7 +46,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:max="100" />
+                android:max="100"
+                android:progressTint="@color/ic_pb" />
 
             <TextView
                 android:id="@+id/textView10"
@@ -50,8 +56,10 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
+                android:background="#777777"
                 android:padding="5dp"
                 android:text="@string/txt_smelltaste"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <TextView
@@ -60,7 +68,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:padding="5dp" />
+                android:background="#777777"
+                android:padding="5dp"
+                android:textColor="@android:color/white" />
 
             <ProgressBar
                 android:id="@+id/pb_smelltaste"
@@ -69,7 +79,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:max="100" />
+                android:max="100"
+                android:progressTint="@color/ic_pb" />
 
             <TextView
                 android:id="@+id/textView18"
@@ -78,8 +89,10 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
+                android:background="#777777"
                 android:padding="5dp"
                 android:text="@string/txt_skin"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <TextView
@@ -88,7 +101,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:padding="5dp" />
+                android:background="#777777"
+                android:padding="5dp"
+                android:textColor="@android:color/white" />
 
             <ProgressBar
                 android:id="@+id/pb_skin"
@@ -97,7 +112,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:max="100" />
+                android:max="100"
+                android:progressTint="@color/ic_pb" />
 
             <TextView
                 android:id="@+id/textView32"
@@ -106,8 +122,10 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
+                android:background="#777777"
                 android:padding="5dp"
                 android:text="@string/txt_breath"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <TextView
@@ -116,7 +134,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:padding="5dp" />
+                android:background="#777777"
+                android:padding="5dp"
+                android:textColor="@android:color/white" />
 
             <ProgressBar
                 android:id="@+id/pb_breath"
@@ -125,7 +145,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:max="100" />
+                android:max="100"
+                android:progressTint="@color/ic_pb" />
 
             <TextView
                 android:id="@+id/textView23"
@@ -134,26 +155,31 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
+                android:background="#777777"
                 android:padding="5dp"
-                android:text="@string/txt_bloodoxygen"
+                android:text="@string/txt_heartDisease"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/txt_oxygenLevels"
+                android:id="@+id/txt_heartDisease"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:padding="5dp" />
+                android:background="#777777"
+                android:padding="5dp"
+                android:textColor="@android:color/white" />
 
             <ProgressBar
-                android:id="@+id/pb_oxygenLevels"
+                android:id="@+id/pb_heartDisease"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:max="100" />
+                android:max="100"
+                android:progressTint="@color/ic_pb" />
 
             <TextView
                 android:id="@+id/textView16"
@@ -162,26 +188,32 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
+                android:background="#777777"
                 android:padding="5dp"
-                android:text="TextView"
+                android:text="@string/txt_cancerRisk"
+                android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/txt_cancerRisk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:background="#777777"
                 android:padding="5dp"
-                android:text="TextView" />
+                android:textColor="@android:color/white" />
 
             <ProgressBar
-                android:id="@+id/progressBar"
+                android:id="@+id/pb_cancerRisk"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp" />
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="30dp"
+                android:progressTint="@color/ic_pb" />
+
         </LinearLayout>
     </ScrollView>
 
