--- a/app/src/main/res/values/ic_launcher_background.xml
+++ b/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#8DC2DB</color>
+    <color name="ic_launcher_background">#E8EBEC</color>
+    <color name="ic_pb">#0C7293</color>
 </resources>
